# i-shubham.github.io

./: .gitignore  CNAME  NAVIGATION_README.md  README_BACKEND.md  index.html  inner-page.html  portfolio-details.html  portfolio_details.html  start_local_backend.sh  test-all-travel-nav.html  test-nav-verification.html  test-travel-nav-fix.html  testing.html  travel-pages-navigation-status.html
assets/css/: style.css
assets/docs/: mongodb-project-details.html  portfolio_info.json  resume backup.html  resume-mongodb.html  resume.html  resume_apply.html  resume_old.html  shubham-resume.html
assets/js/: include.js  main.js  navigation.js  resume-protection.js  url-cleanup.js
assets/resume/: resume.css  resume.css.backup  resume.js
course/: index.html
gpt/: gpt-index.html  index-old.html  index.html
own/: Cargo.toml  README.md  README_QUESTIONS.md  SCALABLE_SETUP_GUIDE.md  SETUP_GUIDE.md  auth copy.html  auth.html  auth.py  compilar.py  compilar.rs  compilar_index.html  compilar_working.py  database.py  database_schema.sql  db_config.py  fastapi_compiler_auth.py  fastapi_compiler_bkp.py  index.html  login.html  main.py  questions_schema.sql  requirements.txt  scalable_auth.py  scalable_compiler_app.py  scalable_database.py  schema.sql  setup_database_robust.py  setup_questions_db.py
tech/: tech-index.html
travel/: index.html  index_old.html
travel/css/: all.min.css  fontawsom-all.min.css  gallery.css  profile_slider.css  style.css  style_page_gallery.css  style_travel.css  template.css
travel/js/: profile_slider.js  script.js
travel/pages/: Lucerne.html  (+10 more)
(+2 files in other folders)
