[package]
name = "compilar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compilar"
path = "compilar.rs"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }
env_logger = "0.10"
